--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thrift-parser = "0.0.5"
+thrift-parser = { git = "https://github.com/d1vanov/thrift-parser.git" }
 clap = "~2.33.0"
